# Trajectory-CI

./: .env.example  .gitattributes  .gitignore  README.md  README.zh-CN.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260702_0001_initial_traces_spans.py  20260702_0002_eval_reports.py  20260702_0003_trace_tenant_id.py
app/: __init__.py  main.py
app/alerts/: service.py
app/api/: anthropic_proxy.py  dashboard.py  openai_proxy.py
app/core/: config.py
app/cost/: __init__.py  calculator.py  pricing.py
app/db/: models.py  session.py
config/: pricing.example.yaml
dashboard/: queries.py  streamlit_app.py  tree.py
docs/: agent-observability-gateway-phase1-prompt.md  agent-observability-gateway-phase2-prompt (1).md
eval/: __init__.py  __main__.py  cli.py  custom_checks.py  data_fetcher.py  loader.py  schemas.py
example/: README_testing.md  anthropic_tool_agent_run.py  deepseek_agent_run.py  mock_upstream_server.py  simulate_agent_run.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: test_integration_anthropic_proxy.py  test_integration_dashboard_api.py  test_integration_eval_compare_postgres.py  test_integration_eval_headers.py  test_integration_openai_proxy.py  test_integration_trace_recorder_postgres.py  test_unit_alerts.py  test_unit_cost_calculator.py  test_unit_dashboard_tree.py  test_unit_eval_checks.py  test_unit_eval_diff.py  test_unit_eval_gate.py  test_unit_eval_schema_loader.py  test_unit_protocols_phase3.py  test_unit_streaming.py  test_unit_trace_recorder.py
(+37 files in other folders)
