[project]
name = "agent-observability-gateway"
version = "0.1.0"
description = "Zero-intrusion OpenAI-compatible observability gateway for LLM agent calls."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "psycopg[binary]>=3.2.0",
    "pyyaml>=6.0.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "streamlit>=1.36.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "dashboard"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
asyncio_mode = "auto"
testpaths = ["tests"]


